syntax = "proto3";
package tendermint.p2p;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/p2p";

message ThresholdData {
  bytes   data = 1;
  int32   hop_count =2;
  string  source_id=3;
}
